# rdma_anns

./: CMakeLists.txt  README.md  analysis.md  instructions.org
benchmark/state_send/: run_benchmark_state_send_tcp.cpp
include/communicator/: communicator.h
include/state_send/: aux_utils.h  disk_utils.h  distance.h  index.h  neighbor.h  pq_table.h  query_buf.h  ssd_partition_index.h  state_send_client.h  timer.h  types.h  utils.h
include/state_send/v2/: lock_table.h
scripts/: cloudlab_addresses.sh  create_indices.sh  kill_all_processes.sh  run_experiment.sh  setup_exp_vars.sh
scripts/experiments/: local_testing.sh
scripts/index_creation/: common_vars.sh  create_graph_files.sh  create_indices.sh  create_indices_then_send.sh  create_indices_v2.sh  create_parlayann_graph.sh  create_scatter_gather_index.sh  create_state_send_index.sh  local_text2image.sh  partition.sh
src/communicator/: communicator.cpp
src/state_send/: CMakeLists.txt  aux_utils.cpp  build_disk_index.cpp  build_memory_index.cpp  convert_parlayann_graph_file.cpp  convert_partition_txt_to_bin.cpp  create_medoid_file.cpp  create_normalized_base_file_mips.cpp  create_partition_assignment_file_from_ids.cpp  create_partition_graph_file.cpp  create_partition_loc_files.cpp  create_pq_data.cpp  disk_utils.cpp  distance.cpp  distributedann_orchestration_thread.cpp  index.cpp  math_utils.cpp  partition_and_pq.cpp  search_state.cpp  search_thread.cpp  ssd_partition_index.cpp  state_send_client.cpp  state_send_server.cpp  types.cpp  utils.cpp
test/: test_cpu.cpp
